# pyFLAC

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
examples/: passthrough.py  stream.py
pyflac/: __init__.py  __main__.py  decoder.py  encoder.py  exceptions.py
pyflac/builder/: build_args.py  decoder.py  encoder.py
pyflac/include/FLAC/: stream_decoder.h
pyflac/libraries/: LICENSE
pyflac/libraries/darwin/: libFLAC.dylib
pyflac/libraries/darwin-arm64/: libFLAC.12.dylib  libFLAC.8.dylib
pyflac/libraries/darwin-x86_64/: libFLAC.12.dylib  libFLAC.8.dylib  libFLAC.dylib
pyflac/libraries/windows-i686/: FLAC-12.lib  FLAC-8.lib  FLAC.lib
pyflac/libraries/windows-x86_64/: FLAC-12.lib  FLAC-8.lib
scripts/: darwin.sh  dist.sh  docs.sh  install.sh  linux.sh  raspbian.sh  windows.sh
tests/: test_decoder.py  test_encoder.py
tests/data/: 32bit.flac  8bit.flac  LICENSE  mono.flac  stereo.flac  surround.flac
